<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center">

        <!-- Título del diálogo -->
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_reto"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <!-- Campo de texto para editar la descripción del reto -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxStrokeColor="@color/orange"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/gray_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_reto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escribe_el_reto"
                android:textColorHint="@color/gray_dark"
                android:textColor="@android:color/black"
                android:inputType="text"
                android:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botones de acción -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!-- Botón Cancelar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/orange"
                app:cornerRadius="5dp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_marginEnd="40dp" />

            <!-- Botón Guardar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textColor="@android:color/white"
                app:cornerRadius="5dp"
                style="@style/Widget.MaterialComponents.Button"
                android:enabled="false" />

        </LinearLayout>
    </LinearLayout>
</layout>