<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeroes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!-- First section with three icons -->
                <ImageView
                    android:id="@+id/ic_reto"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_challenge"
                    app:tint="@color/challenge_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/divider"
                    app:layout_constraintHorizontal_chainStyle="packed" />

                <ImageView
                    android:id="@+id/ic_edit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/des_edit_reto"
                    android:src="@drawable/ic_edit"
                    android:background="@drawable/rounded_icon_background"
                    app:tint="@color/edit_icon"
                    app:layout_constraintStart_toEndOf="@id/ic_reto"
                    app:layout_constraintTop_toTopOf="@id/ic_reto"
                    app:layout_constraintBottom_toBottomOf="@id/ic_reto"
                    app:layout_constraintEnd_toStartOf="@id/ic_delete"
                    app:layout_constraintHorizontal_bias="0.90"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/ic_delete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/des_delete_reto"
                    android:src="@drawable/ic_delete"
                    android:background="@drawable/rounded_icon_background"
                    app:tint="@color/delete_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ic_reto"
                    app:layout_constraintBottom_toBottomOf="@id/ic_reto"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:clickable="true"
                    android:focusable="true" />


                <!-- Divider line -->
                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD"
                    app:layout_constraintTop_toBottomOf="@id/ic_reto"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

                <!-- Second section with text -->
                <TextView
                    android:id="@+id/textSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:paddingTop="5dp"
                    android:text="@string/lore_ipsum"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
